--- a/manifests/database.yml
+++ b/manifests/database.yml
@@ -6,7 +6,7 @@ spec:
   selector:
     matchLabels:
       app: myapp
-  serviceName: <ServiceName>
+  serviceName: mongo service 
   replicas: 2
   template:
     metadata:
@@ -18,10 +18,10 @@ spec:
         image: mongo
         ports:
         - containerPort: 27017
-          name: ongo-db
+          name: mongo-db
         volumeMounts:
         - name: www
-          mountPath: /usr/share/nginx/html
+          mountPath: /data/db 
   volumeClaimTemplates:
   - metadata:
       name: www
