--- a/manifests/database.yml
+++ b/manifests/database.yml
@@ -5,16 +5,16 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: myapp
+      app: db_app
   serviceName: mongo service 
   replicas: 2
   template:
     metadata:
       labels:
-        app: myapp
+        app: db_app
     spec:
       containers:
-      - name: myapp
+      - name: db_app
         image: mongo
         ports:
         - containerPort: 27017
