--- a/manifests/client.yml
+++ b/manifests/client.yml
@@ -20,3 +20,14 @@ spec:
             cpu: "500m"
         ports:
         - containerPort: 3030
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: client_app
+spec:
+  selector:
+    app: client_app
+  ports:
+  - port: 3030
+    targetPort: 3030
