--- a/manifests/client.yml
+++ b/manifests/client.yml
@@ -24,10 +24,10 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: client_app
+  name: clientapp
 spec:
   selector:
-    app: client_app
+    app: clientapp
   ports:
   - port: 3030
     targetPort: 3030
