--- a/manifests/server.yml
+++ b/manifests/server.yml
@@ -16,18 +16,18 @@ spec:
         image: patrickngare/backend:1
         resources:
           limits:
-            memory: "128Mi"
-            cpu: "500m"
+            memory: "500Mi"
+            cpu: "500Mi"
         ports:
         - containerPort: 5000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: ackend_app
+  name: backendapp
 spec:
   selector:
-    app: ackend_app
+    app: backendapp
   ports:
   - port: 5000
     targetPort: 5000
